<resources>
    <string name="app_name">Keep fit</string>
    <string-array name="way_yo_want_to_change">
        <item>Hands</item>
        <item>Chest</item>
        <item>Legs</item>
        <item>Back</item>
        <item>Complex</item>
    </string-array>
    <string-array name="MyOwn">

    </string-array>
    <string-array name="Hands">
        <item>Dumbbells. Take it in both hands and try to lift it ten time three</item>
        <item>Dumbbells. Take it in both hands and try to lift it five time five</item>
        <item>Dumbbells. Take it in both hands and try to lift it two time ten</item>
        <item>Dumbbells. Take it in both hands and try to lift it twenty time</item>
        <item>Pull-ups. Lift yourself up ten time.</item>
        <item>Pull-ups. Lift yourself up fifteen time.</item>
        <item>Pull-ups. Lift yourself up two time seven.</item>
        <item>Pull-ups. Lift yourself up four time five.</item>
        <item>Beams. Lift yourself up four time five.</item>
        <item>Beams. Lift yourself up fifteen time.</item>
        <item>Beams. Lift yourself up ten time.</item>
    </string-array>
    <string-array name="Hands2">
        <item>Dumbbells. Take it in both hands and try to lift it fifteen time three</item>
        <item>Dumbbells. Take it in both hands and try to lift it ten time five</item>
        <item>Dumbbells. Take it in both hands and try to lift it five time ten</item>
        <item>Dumbbells. Take it in both hands and try to lift it forty time</item>
        <item>Pull-ups. Lift yourself up twenty time.</item>
        <item>Pull-ups. Lift yourself up twenty time.</item>
        <item>Pull-ups. Lift yourself up two time ten.</item>
        <item>Pull-ups. Lift yourself up four time ten.</item>
        <item>Beams. Lift yourself up four time ten.</item>
        <item>Beams. Lift yourself up twenty time.</item>
    </string-array>
    <string-array name="Chest">
        <item>Push-ups. 10 time 3</item>
        <item>Push-ups. 5 time 6</item>
        <item>Push-ups. 20 time 2</item>
        <item>Pull-ups. Lift yourself up two time ten.</item>
    </string-array>
    <string-array name="Chest2">
        <item>Push-ups. 20 time 3</item>
        <item>Push-ups. 10 time 6</item>
        <item>Push-ups. 40 time 2</item>
        <item>Pull-ups. Lift yourself up 2 time 20.</item>
    </string-array>
    <string-array name="Legs">
        <item>Sit-ups. On both legs 2 time 20</item>
        <item>Sit-ups. On both legs 40</item>
        <item>Sit-ups. Only one leg 5</item>
        <item>Sit-ups. On one leg 10</item>
    </string-array>
    <string-array name="Legs2">
        <item>Sit-ups. On both legs 2 time 40</item>
        <item>Sit-ups. On both legs 80</item>
        <item>Sit-ups. Only one leg 10</item>
        <item>Sit-ups. On one leg 15</item>
    </string-array>
    <string-array name="Back">
        <item>Pull-ups. Lift yourself up ten time.</item>
        <item>Pull-ups. Lift yourself up fifteen time.</item>
        <item>Pull-ups. Lift yourself up two time seven.</item>
        <item>Pull-ups. Lift yourself up four time five.</item>
        <item>Push-ups. 10 time 3</item>
        <item>Push-ups. 5 time 6</item>
        <item>Push-ups. 20 time 2</item>
    </string-array>
    <string-array name="Back2">
        <item>Pull-ups. Lift yourself up twenty time.</item>
        <item>Pull-ups. Lift yourself up twenty time.</item>
        <item>Pull-ups. Lift yourself up two time ten.</item>
        <item>Pull-ups. Lift yourself up four time ten.</item>
        <item>Push-ups. 10 time 3</item>
        <item>Push-ups. 5 time 6</item>
        <item>Push-ups. 20 time 2</item>
    </string-array>
    <string-array name="Complex">
        <item>Pull-ups. Lift yourself up ten time.</item>
        <item>Pull-ups. Lift yourself up fifteen time.</item>
        <item>Pull-ups. Lift yourself up two time seven.</item>
        <item>Pull-ups. Lift yourself up four time five.</item>
        <item>Push-ups. 10 time 3</item>
        <item>Push-ups. 5 time 6</item>
        <item>Push-ups. 20 time 2</item>
        <item>Sit-ups. On both legs 2 time 20</item>
        <item>Sit-ups. On both legs 40</item>
        <item>Sit-ups. Only one leg 5</item>
        <item>Sit-ups. On one leg 10</item>
        <item>Push-ups. 10 time 3</item>
        <item>Push-ups. 5 time 6</item>
        <item>Push-ups. 20 time 2</item>
        <item>Pull-ups. Lift yourself up two time ten.</item>
        <item>Dumbbells. Take it in both hands and try to lift it ten time three</item>
        <item>Dumbbells. Take it in both hands and try to lift it five time five</item>
        <item>Dumbbells. Take it in both hands and try to lift it two time ten</item>
        <item>Dumbbells. Take it in both hands and try to lift it twenty time</item>
        <item>Pull-ups. Lift yourself up ten time.</item>
        <item>Pull-ups. Lift yourself up fifteen time.</item>
        <item>Pull-ups. Lift yourself up two time seven.</item>
        <item>Pull-ups. Lift yourself up four time five.</item>
        <item>Beams. Lift yourself up four time five.</item>
        <item>Beams. Lift yourself up fifteen time.</item>
        <item>Beams. Lift yourself up ten time.</item>
    </string-array>
    <string-array name="Complex2">
        <item>Pull-ups. Lift yourself up twenty time.</item>
        <item>Pull-ups. Lift yourself up twenty time.</item>
        <item>Pull-ups. Lift yourself up two time ten.</item>
        <item>Pull-ups. Lift yourself up four time ten.</item>
        <item>Push-ups. 10 time 3</item>
        <item>Push-ups. 5 time 6</item>
        <item>Push-ups. 20 time 2</item>
        <item>Dumbbells. Take it in both hands and try to lift it fifteen time three</item>
        <item>Dumbbells. Take it in both hands and try to lift it ten time five</item>
        <item>Dumbbells. Take it in both hands and try to lift it five time ten</item>
        <item>Dumbbells. Take it in both hands and try to lift it forty time</item>
        <item>Pull-ups. Lift yourself up twenty time.</item>
        <item>Pull-ups. Lift yourself up twenty time.</item>
        <item>Pull-ups. Lift yourself up two time ten.</item>
        <item>Pull-ups. Lift yourself up four time ten.</item>
        <item>Beams. Lift yourself up four time ten.</item>
        <item>Beams. Lift yourself up twenty time.</item>
        <item>Push-ups. 20 time 3</item>
        <item>Push-ups. 10 time 6</item>
        <item>Push-ups. 40 time 2</item>
        <item>Pull-ups. Lift yourself up 2 time 20.</item>
        <item>Sit-ups. On both legs 2 time 40</item>
        <item>Sit-ups. On both legs 80</item>
        <item>Sit-ups. Only one leg 10</item>
        <item>Sit-ups. On one leg 15</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab">TabAc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bn">Keep fit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Goal</string>
    <string name="title_notifications">Work Place</string>
    <string name="title_activity_scrolling">Reference</string>
    <string name="Head_of_our_r_text">
      " First of all, here no way you can avoid registration or login on.\n\n"
        " If you not registration yet, you'r first view will be loading of application without knowledge of user name\n\n"
        " Like this:"
    </string>
    <string name="Second_text">
      " Then you will see that one view, where you can add"
        " Information about yourself and so on"
        " In out app you can't skip that stage, and you absolutely should write down"
        "all fields without missing nothing."

    </string>
    <string name="Main_form">
        "And next thing you will see, is our main form. At the main form you can check you'r status,"
        "characteristics and re-set those one."
    </string>
    <string name="Goal_text">
        "We also have Goal form, where you can check or re-set you main goal, and set normal model or hard model."
    </string>
    <string name="Quest_menu">
        "Quest menu, it's menu, where you will work with quests, that pop up in random unique, so, if you deal with quest,"
        "you will increase you'r score at 5 points, but if you also have quest, that you should done with, and you press \"Get new quest\" button"
        "you'r score will decrease at 2 points."
        "What about quest's that should pop up?"
        "That depends on you'r main goal. If you'r main goal is hands, you will only take push-up's and so on."
    </string>
    <string name="Reset">
       "If you want to reset some values about yourself, you can do it at Main menu (where information about you'r characteristics)"
    </string>
    <string name="Reset_second">
       "If you want just set you'r name again, you should press set some values button. and then you may choose you W G and Name."
    </string>
    <string name="Reset_third">
       "If you want set ALL info about yourself, like at the beginning (login form), you should press button above, and will se something like that:"
    </string>
</resources>